[metadata]
# replace with your username:
name = diffjeom
version = 0.0.1
author = Adam Coogan
author_email = dr.adam.coogan@gmail.com
description = Differential geometry with jax
long_description = file: README.md
long_description_content_type = text/markdown
keywords = differential geometry, jax
url = https://github.com/adam-coogan/diffjeom
project_urls =
    Bug Tracker = https://github.com/adam-coogan/diffjeom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    jax
    jaxlib

[options.packages.find]
where = src
